# C-dsm

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.c  common_impl.h  dsm.c  dsm.h  dsmexec.c  dsmwrap.c  exemple.c  exemple_init_finalize.c  machine_file  test_no_dsm.c
Archives/Phase1/: Makefile  common_impl.h
Archives/Phase2/: dsm.h
Phase1/: common.c  common_impl.h  dsmexec.c  dsmwrap.c  machine_file
Phase2/: dsm.c
Sujet/: Phase1.tgz  Phase2.tgz  complement_add_2_numpage.c
